@@ -69,13 +69,12 @@ glm <- function(formula, family = gaussian, data, weights,
     weights <- as.vector(model.weights(mf))
     if(!is.null(weights) && !is.numeric(weights))
         stop("'weights' must be a numeric vector")
-    offset <- as.vector(model.offset(mf))
     ## check weights and offset
     if( !is.null(weights) && any(weights < 0) )
 	stop("negative weights not allowed")
+    offset <- as.vector(model.offset(mf))
     if(!is.null(offset)) {
-        if(length(offset) == 1L) offset <- rep(offset, NROW(Y))
-        else if(length(offset) != NROW(Y))
+        if(length(offset) != NROW(Y))
             stop(gettextf("number of offsets is %d should equal %d (number of observations)", length(offset), NROW(Y)), domain = NA)
     }
     ## these allow starting values to be expressed in terms of other vars.
